<plugin>                 <groupId>org.apache.maven.plugins</groupId>                 <artifactId>maven-surefire-plugin</artifactId>                 <configuration>                     <argLine>                         --add-exports=java.base/sun.nio.ch=ALL-UNNAMED                         --add-opens=java.base/java.lang.reflect=ALL-UNNAMED                         --add-opens=java.base/java.io=ALL-UNNAMED                         --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED                     </argLine>                 </configuration>             </plugin>